tdf#145542: DOCX export: use layout size for non-rotated images

The fix for tdf#138953 changed the DOCX image export to always use the
UNO Size property (unrotated dimensions) instead of the frame LayoutSize.
This is correct for rotated unstretched images, where LayoutSize includes
the rotation bounding box. But for non-rotated images where Size differs
from LayoutSize (e.g., frames with style:rel-width="100%" imported from
HTML or saved by older LO versions), it used the unstretched size, giving
wrong image size.

Only use the Size property when the image is actually rotated.

Note: if an image is both rotated AND scaled, Size still gives the wrong
(unstretched unrotated) dimensions. The correct fix for that case would
require deriving the scale factor from Size, LayoutSize, and the rotation
angle.

Change-Id: Ic9da5b2f8b47818a47e03cac620440108e0ca595
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/202386
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit b0939ce1e1defcd4e12b49019d9fa0c7c1de0213)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/202446
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>