sw/source/filter/ww8/docxattributeoutput.cxx
@@ -5530,9 +5530,15 @@ void DocxAttributeOutput::FlyFrameGraphic( const SwGrfNode* pGrfNode, const Size
     }
 
     Size aSize = rSize;
-    // We need the original (cropped, but unrotated) size of object. So prefer the object data,
-    // and only use passed frame size as fallback.
-    if (xShapePropSet)
+    // tdf#138953: for rotated images, we need the unrotated size from the object's Size property,
+    // because rSize (layout size) includes the rotation bounding box. tdf#145542: for non-rotated
+    // images, size may differ from layout size when the image was scaled (e.g., HTML import with
+    // relative width, or older ODT files). In that case, rSize (layout size) is the correct size.
+    // TODO/FIXME: if an image is both rotated AND scaled, Size gives the unstretched unrotated
+    // dimensions, which is still wrong. The correct value would be the stretched-but-unrotated
+    // size, e.g. by deriving the scale factor from Size, LayoutSize, and the rotation angle.
+    if (xShapePropSet && pGrfNode
+        && pGrfNode->GetSwAttrSet().Get(RES_GRFATR_ROTATION).GetValue() != 0_deg10)
     {
         if (css::awt::Size val; xShapePropSet->getPropertyValue(u"Size"_ustr) >>= val)
             aSize = Size(o3tl::toTwips(val.Width, o3tl::Length::mm100), o3tl::toTwips(val.Height, o3tl::Length::mm100));
